# evif

./: .dockerignore  .gitignore  AGENTS.md  AGFS_ANALYSIS_AND_EVIF17_SUMMARY.md  AGFS_EVIF_GAP_ANALYSIS.md  CLAUDE.md  CLOUD_STORAGE_CONFIG_EXAMPLES.md  CLOUD_STORAGE_GUIDE.md  CORE_INTERFACE_ANALYSIS.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_CLEANUP_REPORT.md  Dockerfile  EVIF1.7_COMPLETE_FINAL_SUMMARY.md  EVIF1.7_FINAL_COMPLETION_REPORT.md  EVIF1.8_100_PERCENT_COMPLETE.md  EVIF1.8_DEEP_ANALYSIS_REPORT.md  EVIF1.8_FINAL_SESSION_SUMMARY.md  EVIF1.8_P0_IMPLEMENTATION_REPORT.md  EVIF1.8_PHASE21_COMPLETE_REPORT.md  EVIF1.8_PROJECT_COMPLETE_REPORT.md  EVIF1.8_ULTRA_FINAL_IMPLEMENTATION_REPORT.md  EVIF1.8_ULTRA_FINAL_REPORT.md  EVIF2.3_EXECUTION_REPORT.md  EVIF_1.8_EXTISM_FINAL_REPORT.md  EVIF_1.8_FINAL_COMPLETION_REPORT.md  EVIF_1.8_PROJECT_STATUS_REPORT.md  EVIF_1.9.1_FINAL_COMPLETION_REPORT.md  EVIF_PHASE1_FUSE_100_COMPLETE.md  FUSE_1.9.1_SUMMARY.md  FUSE_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  PR  PRODUCTION_READINESS.md  PRODUCTION_READINESS_CHECKLIST.md  PROMPT.md  README-CN.md  README.md  SQLFS_IMPLEMENTATION_COMPLETE.md  TESTING.md  (+89 more)
crates/evif-auth/: Cargo.toml
crates/evif-auth/src/: audit.rs  audit_query.rs  auth.rs  capability.rs  error.rs  lib.rs
crates/evif-bench/: Cargo.toml
crates/evif-bench/src/: agentbench.rs  idebench.rs  l0co.rs  lib.rs  osworld.rs  performance.rs
crates/evif-cli/: Cargo.toml
crates/evif-cli/src/: cli.rs  commands.rs  completer.rs  control_flow.rs  main.rs  redirection.rs  repl.rs  script.rs
crates/evif-cli/tests/: integration_tests.rs  surface_contract.rs
crates/evif-client/: Cargo.toml
crates/evif-client/src/: cache.rs  client.rs  lib.rs  transport.rs
crates/evif-core/: Cargo.toml
crates/evif-core/src/: acl.rs  agent_tracking.rs  batch_operations.rs  circuit_breaker.rs  config.rs  config.rs.bak2  config_validation.rs  cross_fs_copy.rs  dynamic_loader.rs  error.rs  extism_plugin.rs  file_lock.rs  file_monitor.rs  handle_manager.rs  lib.rs  memory_handle.rs  monitoring.rs  mount_table.rs  plugin.rs  plugin_pool.rs  plugin_registry.rs  radix_benchmarks.rs  radix_mount_table.rs  server.rs  snapshot.rs  streaming.rs
crates/evif-core/tests/: config_tests.rs  extism_plugin_tests.rs  plugin_lifecycle.rs
crates/evif-core/wit/: evif_plugin.wit
crates/evif-fuse/: Cargo.toml
crates/evif-fuse/src/: dir_cache.rs  inode_manager.rs  lib.rs  mount_config.rs
crates/evif-fuse/tests/: fuse_integration_test.rs
crates/evif-graph/: Cargo.toml
crates/evif-graph/src/: edge.rs  error.rs  executor.rs  graph.rs  index.rs  lib.rs  node.rs  query.rs  temporal.rs
crates/evif-grpc/: Cargo.toml  build.rs
crates/evif-grpc/proto/: evif.proto
crates/evif-grpc/src/: client.rs  client.rs.bak2  client.rs.bak4  client.rs.bak5  client.rs.disabled  error.rs  lib.rs  server.rs  server.rs.bak10  server.rs.bak3  server.rs.bak6  server.rs.disabled
crates/evif-grpc/tests/: integration_test.rs
crates/evif-macros/: Cargo.toml
crates/evif-macros/src/: builder.rs  error_module.rs  lib.rs  node.rs
crates/evif-mcp/: Cargo.toml  README.md  claude-desktop-config.json
crates/evif-mcp/src/: lib.rs  main.rs  mcp_auth.rs  mcp_client.rs  mcp_gateway.rs  mcp_router.rs  mcp_server_plugin.rs
crates/evif-mcp/tests/: mcp_phase15.rs
crates/evif-mem/: Cargo.toml
crates/evif-mem-py/: README.md  pyproject.toml
crates/evif-mem-py/evif_mem/: __init__.py  client.py  config.py  evif_client.py  filesystem.py  handles.py  models.py  plugins.py
crates/evif-mem-py/tests/: __init__.py  test_client.py  test_evif_client.py
crates/evif-mem/dashboards/: README.md  dashboard.yml  docker-compose.yml  evif-mem-overview.json  prometheus.yml
crates/evif-mem/src/: embedding.rs  error.rs  langchain.rs  lib.rs  llamaindex.rs  llm.rs  metrics.rs  models.rs  pipeline.rs  plugin.rs  proactive.rs  telemetry.rs  token.rs  workflow.rs
crates/evif-metrics/: Cargo.toml
crates/evif-metrics/grafana/: dashboard.json
crates/evif-metrics/src/: error.rs  lib.rs  prometheus.rs  traffic.rs  types.rs
crates/evif-metrics/tests/: metrics_test.rs
crates/evif-plugins/: Cargo.toml  GPTFS_IMPLEMENTATION_COMPLETE.md  SQLFS_FINAL_STATUS_REPORT.md  SQLFS_IMPLEMENTATION_SUMMARY.md  SQLFS_PROGRESS_REPORT.md
crates/evif-plugins/src/: aliyunossfs.rs  azureblobfs.rs  catalog.rs  context_manager.rs  contextfs.rs  devfs.rs  discordfs.rs  encryptedfs.rs  ftpfs.rs  gcsfs.rs  githubfs.rs  gmailfs.rs  gptfs.rs  handlefs.rs  heartbeatfs.rs  hellofs.rs  httpfs.rs  huaweiobsfs.rs  kvfs.rs  lib.rs  localfs.rs  memfs.rs  miniofs.rs  notionfs.rs  opendal.rs  pipefs.rs  postgresfs.rs  proxyfs.rs  queuefs.rs  s3fs.rs  s3fs_opendal.rs  serverinfofs.rs  sftpfs.rs  shopifyfs.rs  skill_runtime.rs  skillfs.rs  slackfs.rs  sqlfs.rs  sqlfs.rs.before_fix  sqlfs2.rs  (+8 more)
crates/evif-plugins/tests/: agentbench.rs  contextfs_behavior.rs  core_supported_plugins.rs  encryptedfs_test.rs  heartbeatfs_behavior.rs  osworld_idebench.rs  performance_bench.rs  pipefs_behavior.rs  proxyfs_behavior.rs  queuefs_behavior.rs  sqlfs2_behavior.rs  (+5 more)
crates/evif-protocol/: Cargo.toml
crates/evif-python/: pyproject.toml
crates/evif-rest/: Cargo.toml  WEBSOCKET_IMPLEMENTATION.md  openapi.yaml
crates/evif-runtime/: Cargo.toml
crates/evif-storage/: Cargo.toml
crates/evif-vfs/: Cargo.toml
crates/example-dynamic-plugin/: Cargo.toml
examples/: 01_basic_graph.rs  02_storage_backends.rs  03_auth_capabilities.rs  04_graph_queries.rs  05_vfs_operations.rs  06_metrics_monitoring.rs  Cargo.toml  README.md  comprehensive_example.rs  integration_example.rs  mcp-config.json  rest_integration_example.rs
examples/src/: evif_integration.rs  main.rs  test_china_cloud.rs  test_s3.rs
examples/wasm-plugin/: Cargo.toml  README.md
tests/api/: Cargo.toml  handles_and_batch.rs
tests/cli/: Cargo.toml  batch_and_search.rs  plugin_management.rs
tests/common/: Cargo.toml
tests/core/: Cargo.toml  vfs_and_core.rs
tests/e2e/: Cargo.toml
tests/integration/: Cargo.toml  no_graph_deps.sh  no_graph_left.sh  verify_supported_surface.sh
(+580 files in other folders)
