[workspace]
members = [
    "crates/evif-runtime",
    "crates/evif-graph",
    "crates/evif-storage",
    "crates/evif-auth",
    "crates/evif-vfs",
    "crates/evif-protocol",
    "crates/evif-fuse", # FUSE 集成支持
    "crates/evif-grpc",
    "crates/evif-rest",
    "crates/evif-macros",
    "crates/evif-client",
    "crates/evif-cli",
    "crates/evif-metrics", "crates/evif-core", "crates/evif-plugins",
    "crates/evif-mcp",
    "crates/example-dynamic-plugin",
    "examples",
    "tests/e2e",
    "tests/common",
    "tests/cli",
    "tests/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EVIF Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/evif/evif"
homepage = "https://evif.io"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bytes = "1.5.0"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Graph and algorithms
petgraph = "0.6.4"

# Concurrent data structures
dashmap = "5.5.3"
ahash = "0.8.7"

# UUID
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Chrono for time
chrono = { version = "0.4.31", features = ["serde"] }

# Configuration
config = "0.14.0"

# Crypto
blake3 = "1.5.0"
ed25519-dalek = "2.1.1"

# Testing
proptest = "1.4.0"
criterion = "0.5.1"
tokio-test = "0.4.3"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
