[workspace]
members = [
    "crates/evif-bench",
    "crates/evif-auth",
    "crates/evif-fuse", # FUSE 集成支持
    "crates/evif-rest",
    "crates/evif-macros",
    "crates/evif-client",
    "crates/evif-cli",
    "crates/evif-metrics", "crates/evif-core", "crates/evif-plugins",
    "crates/evif-mcp",
    "crates/evif-mem",  # Memory platform
    "crates/example-dynamic-plugin",
    "examples",
    "examples/wasm-plugin",
    "examples/plugins/wasmtime",
    "tests/e2e",
    "tests/common",
    "tests/cli",
    "tests/api",
    "tests/core",
]
default-members = [
    "crates/evif-bench",
    "crates/evif-auth",
    "crates/evif-core",
    "crates/evif-plugins",
    "crates/evif-rest",
    "crates/evif-cli",
    "crates/evif-fuse",
    "crates/evif-mcp",
    "crates/evif-mem",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EVIF Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/evif/evif"
homepage = "https://evif.io"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_qs = "0.12"
bytes = "1.5.0"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Concurrent data structures
dashmap = "5.5.3"
ahash = "0.8.7"

# UUID
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Chrono for time
chrono = { version = "0.4.31", features = ["serde"] }

# Configuration
config = "0.14.0"

# Crypto
blake3 = "1.5.0"
ed25519-dalek = "2.1.1"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# GraphQL API (Phase 17.4)
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Testing
proptest = "1.4.0"
criterion = "0.5.1"
tokio-test = "0.4.3"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
