[package]
name = "evif-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tool for EVIF"

[[bin]]
name = "evif"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# CLI dependencies
clap = { version = "4.4.18", features = ["derive"] }
reedline = "0.25.0"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
regex = "1.10"
dirs = "5.0"

# Local crates
evif-runtime = { path = "../evif-runtime" }
evif-client = { path = "../evif-client" }
evif-graph = { path = "../evif-graph" }
evif-core = { path = "../evif-core", optional = true }

# FUSE support (optional)
fuser = { version = "0.13.0", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"

[features]
default = []
fuse = ["fuser", "lazy_static", "evif-core"]
