[package]
name = "evif-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client SDK for accessing EVIF"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Local crates
evif-core = { path = "../evif-core" }

# Additional dependencies
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = { workspace = true }
mockito = "1.2.0"
