[package]
name = "evif-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
# Logging
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Bitflags
bitflags = "2.4"

# UUID for operation IDs
uuid = { version = "1", features = ["serde", "v4"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Config serialization
toml = "0.8"
serde_yaml = "0.9"

# Radix Tree for routing optimization
radix_trie = "0.3"

# Extism for WASM plugin support (optional - independent backend)
extism = { version = "1.0", optional = true }

# Wasmtime for WASM plugin support (optional - independent backend)
wasmtime = { version = "27", optional = true, features = ["pooling-allocator"] }
wasmtime-wasi = { version = "27", optional = true }

# Base64 encoding for WASM data transfer
base64 = "0.22"

# Dynamic library loading for plugin system
libloading = "0.8"

# Lock types that don't poison on panic
parking_lot = "0.12"

# System information (CPU, memory, disk)
sysinfo = "0.30"

[features]
default = []
# Extism WASM plugin backend (independent, multi-language PDK)
extism-backend = ["extism"]
# Wasmtime WASM plugin backend (independent, high performance)
wasmtime-backend = ["wasmtime", "wasmtime-wasi"]
# Enable all WASM backends
wasm = ["extism-backend", "wasmtime-backend"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
