[package]
name = "evif-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC service implementation for EVIF"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# gRPC dependencies
tonic = "0.11.0"
prost = "0.12.3"
tokio-stream = "0.1"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Local crates
evif-vfs = { path = "../evif-vfs" }
evif-protocol = { path = "../evif-protocol" }
evif-graph = { path = "../evif-graph" }
evif-auth = { path = "../evif-auth" }

[dev-dependencies]
tokio-test = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
