[package]
name = "evif-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# URL encoding for query params
urlencoding = "2.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.4.18", features = ["derive", "env"] }

[[bin]]
name = "evif-mcp"
path = "src/main.rs"

[dev-dependencies]
axum = { version = "0.7.4", features = ["json"] }
tokio-test = { workspace = true }
evif-core = { path = "../evif-core" }
evif-plugins = { path = "../evif-plugins", features = ["sqlfs"] }
evif-rest = { path = "../evif-rest" }
