[package]
name = "evif-mem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Memory platform for EVIF - AI agent memory with MD file format"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Additional dependencies
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex-lite = "0.1"
base64 = "0.22"

# Optional dependencies
rusqlite = { version = "0.32", optional = true }

# EVIF core for plugin integration
evif-core = { path = "../evif-core", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
plugin = ["dep:evif-core"]
