[package]
name = "evif-mem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Memory platform for EVIF - AI agent memory with MD file format"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Additional dependencies
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex-lite = "0.1"
base64 = "0.22"

# Optional dependencies
rusqlite = { version = "0.32", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
faiss = { version = "0.12", optional = true }
qdrant-client = { version = "1.7", optional = true }
prometheus = { version = "0.13", optional = true }

# Telemetry dependencies
tracing-subscriber = { version = "0.3", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.22", optional = true }
opentelemetry-otlp = { version = "0.15", optional = true }
opentelemetry_sdk = { version = "0.22", optional = true }

# Security dependencies
rand = "0.8"

# EVIF core for plugin integration
evif-core = { path = "../evif-core", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
rand = "0.8"
criterion = { workspace = true, features = ["async_tokio"] }

[features]
default = []
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx"]
plugin = ["dep:evif-core"]
faiss = ["dep:faiss"]
qdrant = ["dep:qdrant-client"]
metrics = ["dep:prometheus"]
telemetry = ["dep:tracing-subscriber", "dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]
security = []

[[bench]]
name = "vector_bench"
harness = false
path = "benches/vector_bench.rs"
