[package]
name = "evif-metrics"
version = "0.1.0"
edition = "2021"

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus", "dep:lazy_static"]

[dependencies]
tokio = { version = "1.35", features = ["sync", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Optional: Prometheus support
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
