[package]
name = "evif-rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST/HTTP API for EVIF"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Web framework
axum = { version = "0.7.4", features = ["json", "ws"] }
tower = { version = "0.4.13", features = ["limit", "timeout"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
hyper = "1.1.0"

# WebSocket support
tokio-tungstenite = "0.21.0"
futures-util = "0.3.28"

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
parking_lot = "0.12"

# 文件哈希和正则
md5 = "0.7"
sha2 = { workspace = true }
digest = "0.10"
regex = "1"

# Encryption (Phase 17.2)
aes-gcm = { workspace = true }
rand = { workspace = true }

# GraphQL API (Phase 17.4)
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Local crates
evif-core = { path = "../evif-core" }
evif-plugins = { path = "../evif-plugins", features = ["sqlfs"] }
evif-mem = { path = "../evif-mem", features = ["sqlite", "postgres"] }
evif-auth = { path = "../evif-auth" }
evif-metrics = { path = "../evif-metrics", features = ["prometheus"] }

# Config file formats (re-export from evif-core for mount config)
toml = "0.8"
serde_yaml = "0.9"

# CLI argument parsing
clap = { version = "4.4.18", features = ["derive", "env"] }

# N12: Config hot-reload via file watching
notify = "6"

# N10b: Log rotation — non-blocking async file writer with daily rotation
tracing-appender = "0.2"

# N0: TLS transport encryption — tokio-rustls for HTTPS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.13"
hyper-util = { version = "0.1.19", features = ["tokio", "http1", "server-auto", "service"] }

[features]
wasm = ["evif-core/wasm"]
default = []

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tower-test = "0.4.0"
tower05 = { package = "tower", version = "0.5.3", features = ["util"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
