[package]
name = "evif-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core runtime and orchestration for EVIF"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local crates
evif-graph = { path = "../evif-graph" }
evif-storage = { path = "../evif-storage" }
evif-auth = { path = "../evif-auth" }

[dev-dependencies]
tokio-test = { workspace = true }
