[package]
name = "evif-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Storage layer with pluggable backends for EVIF"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }

# Local crates
evif-graph = { path = "../evif-graph" }

# Storage backends (optional, feature-gated)
sled = { version = "0.34.7", optional = true }
rocksdb = { version = "0.21.0", optional = true }
aws-config = { version = "1.5.0", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.20.0", optional = true }
aws-smithy-runtime = { version = "1.2.0", optional = true }
aws-smithy-types = { version = "1.3.0", optional = true }
hex = { version = "0.4", optional = true }

# Additional dependencies
async-stream = "0.3.5"
futures = "0.3.30"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.9.0"
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "storage_bench"
harness = false
path = "../../benches/storage_bench.rs"

[features]
default = ["memory", "sled-backend"]
memory = []
sled-backend = ["sled"]
rocksdb-backend = ["rocksdb"]
s3-backend = ["aws-config", "aws-sdk-s3", "aws-smithy-runtime", "aws-smithy-types", "hex"]
