[package]
name = "evif-vfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Virtual file system abstraction for EVIF"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Local crates
evif-graph = { path = "../evif-graph" }
evif-auth = { path = "../evif-auth" }

# Additional dependencies
futures = "0.3.30"
async-stream = "0.3.5"
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.9.0"
