[package]
name = "example-dynamic-plugin"
version = "0.1.0"
edition = "2021"
authors = ["EVIF Team"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
evif-core = { path = "../evif-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
