[package]
name = "api-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "api_tests"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
serde_json = { workspace = true }
